# SGP30_ESP-IDF

./: .gitignore  CMakeLists.txt  CMakeListsPrivate.cmake  Makefile  README.md  sdkconfig  sdkconfig.old
components/SGP30/: CMakeLists.txt  LICENSE  SGP30.c  component.mk
components/SGP30/include/: SGP30.h
main/: CMakeLists.txt  Kconfig.projbuild  sgp30_example_main.c
